fixed spacing

--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "Matter";
+  src: url("assets/fonts/matter-light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* ========== DESIGN TOKENS ========== */
 :root {
   /* Fonts */
@@ -1643,6 +1651,8 @@ button {
 .card-desc {
   padding: 0px 28px;
   margin-bottom: 10px;
+  font-family: "Matter";
+  font-weight: 300;
   color: #181d27;
 }
 
